--- a/problemSets/PS01/JB_My_Answers/JBouvier_PS01.tex
+++ b/problemSets/PS01/JB_My_Answers/JBouvier_PS01.tex
@@ -62,7 +62,7 @@
 
 \title{Problem Set 1}
 \date{Due: October 1, 2023}
-\author{Jacqueline Bouvier Applied Stats/Quant Methods 1}
+\author{Applied Stats/Quant Methods 1}
 
 \begin{document}
 	\maketitle
@@ -80,25 +80,20 @@
 
 A school counselor was curious about the average of IQ of the students in her school and took a random sample of 25 students' IQ scores. The following is the data set:\\
 \vspace{.5cm}
-y <- c(105, 69, 86, 100, 82, 111, 104, 110, 87, 108, 87, 90, 94, 113, 112, 98, 80, 97, 95, 111, 114, 89, 95, 126, 98)
-length(y)
-n <- length(y)
-df <- (n-1)
 
+\lstinputlisting[language=R, firstline=36, lastline=36]{PS01.R}  
 
 \vspace{1cm}
 
 \begin{enumerate}
 	\item Find a 90\% confidence interval for the average student IQ in the school.\\
 	
-\lstinputlisting[language=R, firstline=39, lastline=60]{JB_PS01.R}]
-
-	
-	\item Next, the schoolounselor was curious  whether  the average student IQ in her school is higher than the average IQ score (100) among all the schools in the country.\\ 
+	\item Next, the school counselor was curious  whether  the average student IQ in her school is higher than the average IQ score (100) among all the schools in the country.\\ 
 	
 	\noindent Using the same sample, conduct the appropriate hypothesis test with $\alpha=0.05$.
-\lstinputlisting[language=R, firstline=62, lastline=81]{JB_PS01.R}]
 \end{enumerate}
+
+\newpage
 
 	\section*{Question 2 (40 points): Political Economy}
 
@@ -118,45 +113,19 @@ df <- (n-1)
 \vspace{.5cm}
 \noindent Explore the \texttt{expenditure} data set and import data into \texttt{R}.
 \vspace{.5cm}
-
-
+\lstinputlisting[language=R, firstline=54, lastline=54]{PS01.R}  
+\vspace{.5cm}
 \begin{itemize}
+
 \item
 Please plot the relationships among \emph{Y}, \emph{X1}, \emph{X2}, and \emph{X3}? What are the correlations among them (you just need to describe the graph and the relationships among them)?
 \vspace{.5cm}
-\lstinputlisting[language=R, firstline=90, lastline=139]{JB_PS01.R}]
-
-
 \item
 Please plot the relationship between \emph{Y} and \emph{Region}? On average, which region has the highest per capita expenditure on housing assistance?
 \vspace{.5cm}
-\lstinputlisting[language=R, firstline=143, lastline=151]{JB_PS01.R}]
 \item
 Please plot the relationship between \emph{Y} and \emph{X1}? Describe this graph and the relationship. Reproduce the above graph including one more variable \emph{Region} and display different regions with different types of symbols and colors.
-\lstinputlisting[language=R, firstline=152, lastline=166]{JB_PS01.R}]
 \end{itemize}
-\begin{figure}[h!]\centering
-	\caption{\footnotesize  Variable Relationships.}
-	\label{fig:plot_1}
-	\includegraphics[width=.65\textwidth]{PS01_Q2_pt1.pdf}
-	\centering
-	\caption{\footnotesize X Variable Relationships.}
-	\label{fig:plot_2}
-	\includegraphics[width=.65\textwidth]{Jbouvier_X1X2X3plots.pdf}
-	\centering
-\end{figure}
-\begin{figure}
-	\caption{\footnotesize Expenditure vs Region.}
-	\label{fig:plot_3}
-	\includegraphics[width=.65\textwidth]{Jbouvier_Q2_pt2.pdf}
-	\centering
-\end{figure}
-\begin{figure}
-	\caption{\footnotesize Expenditure vs Peronal income with Regional Variable.}
-	\label{fig:plot_4}
-	\includegraphics[width=.75\textwidth]{Jbouvier_Q2_pt3.pdf}
-	\centering
-	
-\end{figure}
+
 
 \end{document}
